frontend/src/index.css
/* ... */
@keyframes floatMoon {
  0%, 100% { transform: translateY(0); }
  50% { transform: translateY(-15px); }
}

.css-forest {
  position: absolute;
  bottom: -20px;
  left: 0;
  width: 100%;
  height: 35vh;
  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200" preserveAspectRatio="none"><path d="M0,200 L0,150 L30,120 L50,150 L80,100 L120,160 L150,90 L200,180 L250,70 L300,160 L350,100 L400,170 L450,80 L500,190 L550,60 L600,150 L650,40 L700,140 L750,90 L800,170 L850,50 L900,160 L950,100 L1000,180 L1000,200 Z" fill="%230f172a"/></svg>') repeat-x bottom;
  background-size: 800px 100%;
  z-index: 1;
  filter: drop-shadow(0 -20px 40px rgba(2, 6, 23, 1));
}
.css-forest::before {
  content: '';
  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  height: 50vh;
  background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1000 200" preserveAspectRatio="none"><path d="M0,200 L0,130 L40,160 L70,110 L100,140 L150,80 L180,150 L220,100 L260,160 L300,90 L350,140 L380,70 L420,150 L460,110 L500,160 L540,80 L580,140 L620,100 L660,170 L700,120 L740,160 L780,90 L820,150 L860,110 L900,160 L950,80 L1000,170 L1000,200 Z" fill="%23020617"/></svg>') repeat-x bottom;
  background-size: 1200px 100%;
  opacity: 0.8;
}

